# mangroveCore

./: CMakeLists.txt  main.c
lib/mangroveRender/: mangroveRender.c  mangroveRender.h
lib/terminalRender/: terminalRender.c  terminalRender.h
lib/types/: rgba.h  scene.h
